--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "author": "Victor Batalha",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "ts-node src/server.ts",
+    "dev:server": "ts-node-dev src/server.ts"
+  },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/express": "^4.17.6",
     "cz-conventional-changelog": "3.2.0",
     "husky": "^4.2.5",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -21,5 +26,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
