--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev:server": "ts-node-dev src/server.ts"
+    "start": "ts-node src/shared/infra/http/server.ts",
+    "dev:server": "ts-node-dev src/shared/infra/http/server.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
