--- a/package.json
+++ b/package.json
@@ -8,18 +8,28 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "ts-node src/shared/infra/http/server.ts",
-    "dev:server": "ts-node-dev src/shared/infra/http/server.ts"
+    "start": "ts-node -r tsconfig-paths/register src/shared/infra/http/server.ts",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --respawn --transpileOnly src/shared/infra/http/server.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/express": "^4.17.6",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "cz-conventional-changelog": "3.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "ttypescript": "^1.5.10",
     "typescript": "^3.9.5",
+    "typescript-eslint-parser": "^22.0.0",
     "typescript-transform-paths": "^1.1.14"
   },
   "config": {
