--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,26 @@
-version: '3'
+version: "3"
 
 services:
-  app:
+  moneyshield-app:
     build: .
-    command: 'npm run dev:server'
+    command: "npm run dev:server"
     volumes:
       - .:/usr/app
     ports:
-      - '3333:3333'
+      - "3333:3333"
+    networks:
+      - moneyshield
+
+  moneyshield-db:
+    image: postgres:12.3-alpine
+    volumes:
+      - ./.docker/dbdata:/var/lib/posgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=moneyshield
+    ports:
+      - "5432:5432"
     networks:
       - moneyshield
 
