--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "private": true,
   "scripts": {
     "start": "ts-node -r tsconfig-paths/register src/shared/infra/http/server.ts",
-    "dev:server": "ts-node-dev -r tsconfig-paths/register --respawn --transpileOnly src/shared/infra/http/server.ts"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --respawn --transpileOnly src/shared/infra/http/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.3",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "cz-conventional-changelog": "3.2.0",
@@ -25,7 +27,10 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-extended": "^0.11.5",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "ttypescript": "^1.5.10",
     "typescript": "^3.9.5",
