--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
-version: "3"
+version: '3'
 
 services:
   moneyshield-app:
     build: .
-    command: "npm run dev:server"
+    container_name: moneyshield-app
+    command: 'npm run dev:server'
     volumes:
       - .:/usr/app
     ports:
-      - "3333:3333"
+      - '3333:3333'
     networks:
       - moneyshield
 
   moneyshield-db:
     image: postgres:12.3-alpine
+    container_name: moneyshield-db
     volumes:
       - ./.docker/dbdata:/var/lib/posgresql/data
     environment:
@@ -20,7 +22,7 @@ services:
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=moneyshield
     ports:
-      - "5432:5432"
+      - '5432:5432'
     networks:
       - moneyshield
 
