--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@prisma/cli": "^2.0.0-beta.9",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.12",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "cz-conventional-changelog": "3.2.0",
@@ -31,6 +33,7 @@
     "jest-extended": "^0.11.5",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
+    "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "ttypescript": "^1.5.10",
     "typescript": "^3.9.5",
@@ -43,6 +46,7 @@
     }
   },
   "dependencies": {
+    "@prisma/client": "^2.0.0-beta.9",
     "express": "^4.17.1",
     "tsyringe": "^4.3.0"
   }
