--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.9",
     "express": "^4.17.1",
-    "tsyringe": "^4.3.0"
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.3.0",
+    "uuidv4": "^6.1.0"
   }
 }
