--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@prisma/cli": "^2.0.0-beta.9",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.12",
@@ -47,7 +48,9 @@
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.9",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "uuidv4": "^6.1.0"
