--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.12",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "cz-conventional-changelog": "3.2.0",
@@ -53,6 +54,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.8",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "uuidv4": "^6.1.0"
