--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/cli": "^2.0.0-beta.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.12",
@@ -53,6 +54,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.8",
     "reflect-metadata": "^0.1.13",
