--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,8 @@
 {
   "hooks": {
     "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
-    "commit-msg": "yarn commitlint -E HUSKY_GIT_PARAMS"
+    "commit-msg": "yarn commitlint -E HUSKY_GIT_PARAMS",
+    "pre-commit": "yarn test",
+    "pre-push": "yarn build && yarn test"
   }
 }
