--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@prisma/cli": "^2.0.0-beta.9",
+    "@prisma/cli": "2.0.0-beta.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/handlebars": "^4.1.0",
@@ -51,8 +51,9 @@
     }
   },
   "dependencies": {
-    "@prisma/client": "^2.0.0-beta.9",
+    "@prisma/client": "2.0.0-beta.9",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
