--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
-version: '3'
+version: "3"
 
 services:
   moneyshield-app:
     build: .
     container_name: moneyshield-app
-    command: 'npm run dev:server'
+    command: "npm run dev:server"
+    tty: true
+    privileged: true
     volumes:
       - .:/usr/app
     ports:
-      - '3333:3333'
+      - "3333:3333"
     networks:
       - moneyshield
 
@@ -22,7 +24,7 @@ services:
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=moneyshield
     ports:
-      - '5432:5432'
+      - "5432:5432"
     networks:
       - moneyshield
 
