--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.155",
     "@types/node": "^14.0.12",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
@@ -59,6 +60,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "nodemailer": "^6.4.8",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
